@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-22T08:10:21Z",
-  "count" : 10,
+  "timestamp" : "2022-04-22T16:10:16Z",
+  "count" : 9,
   "count_minmax" : [ 0, 27 ],
   "count_prev_day_inc" : 17,
   "count_prev_day_dec" : 6,
