@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-22T08:10:21Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 17,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "timestamp" : "2022-04-22T16:10:16Z",
+  "count" : 6,
+  "count_minmax" : [ 0, 6 ],
+  "count_prev_day_inc" : 7,
+  "count_prev_day_dec" : 18,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
