@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-04-22T08:10:21Z",
+  "timestamp" : "2022-04-22T16:10:16Z",
   "count_outdated" : 931,
   "uniques_outdated" : 53,
-  "count" : 1025,
-  "uniques" : 65,
+  "count" : 1030,
+  "uniques" : 66,
   "views" : [
     {
       "timestamp": "2022-04-08T00:00:00Z",
-      "count": 10,
+      "count": 9,
       "count_minmax": [ 0, 27 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
@@ -88,6 +88,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-22T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
