@@ -1,10 +1,10 @@
 {
-  "count": 94,
-  "uniques": 1,
+  "count": 99,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2022-04-08T00:00:00Z",
-      "count": 10,
+      "count": 9,
       "uniques": 1
     },
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-04-21T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-22T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
