@@ -1,3 +1,9 @@
+2022-04-22T16:10:16Z:
+* notice: last 14d: all unq: 99 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 931 53 / 1025 65
+* notice: next accum: outdated-all outdated-unq / all unq: 931 53 / 1030 66
+* notice: prev json diff // prev day diff: unq all: +1 +6 / -0 -1 // +1 +7 / -0 -18
+
 2022-04-22T08:10:21Z:
 * notice: last 14d: all unq: 94 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 931 53 / 1042 65
